# nd2py

./: .buildinfo  .gitignore  CLAUDE.md  README.md  abo_tree_test.py  api_reference.html  debug.py  examples.html  genindex.html  guide.html  index.html  main.py  make_doc.sh  mixin_test.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api_reference.doctree  environment.pickle  examples.doctree  guide.doctree  index.doctree
.github/workflows/: docs.yml  pypi.yml
_modules/: index.html
_modules/nd2py/core/: base_visitor.html  symbol_api.html
_modules/nd2py/utils/: attr_dict.html  auto_gpu.html  classproperty.html  factory.html  fix_parser.html  lazy_loader.html  log_exception.html  logger.html  metrics.html  model_store.html  plot.html  render_markdown.html  render_python.html  tag2ansi.html  timing.html  utils.html
_sources/: api_reference.rst.txt  index.rst
_sources/api/: modules.rst  nd2py.core.basic.rst  nd2py.core.calc.rst  nd2py.core.context.rst  nd2py.core.converter.rst  nd2py.core.nettype.rst  nd2py.core.rst  nd2py.core.symbols.rst  nd2py.core.transform.rst  nd2py.core.tree.rst  nd2py.dataset.rst  nd2py.generator.data.rst  nd2py.generator.eq.rst  nd2py.generator.rst  nd2py.rst  nd2py.search.e2esr.rst  nd2py.search.gp.rst  nd2py.search.llmsr.api.rst  nd2py.search.llmsr.rst  nd2py.search.mcts.rst  nd2py.search.ndformer.rst  nd2py.search.rst  nd2py.utils.nn.rst  nd2py.utils.rst
abo_tree/: __init__.py  abo_tree.py  bottomup_engine.py  topdown_engine.py  tree_editor.py
api/: modules.html  nd2py.core.basic.html  nd2py.core.calc.html  nd2py.core.context.html  nd2py.core.converter.html  nd2py.core.html  nd2py.core.nettype.html  nd2py.core.symbols.html  nd2py.core.transform.html  nd2py.core.tree.html  nd2py.dataset.html  nd2py.generator.data.html  nd2py.generator.eq.html  nd2py.generator.html  nd2py.html  nd2py.search.e2esr.html  nd2py.search.gp.html  nd2py.search.html  nd2py.search.llmsr.api.html  nd2py.search.llmsr.html  nd2py.search.mcts.html  nd2py.search.ndformer.html  nd2py.utils.html  nd2py.utils.nn.html
demo/: gp.py  llmsr.py
docs/source/: api_reference.md  conf.py  examples.md  guide.md  index.rst
docs/source/_static/: custom.css
docs/source/api/: nd2py.core.basic.rst  nd2py.core.calc.rst  nd2py.core.context.rst  nd2py.core.converter.rst  nd2py.core.nettype.rst  nd2py.core.rst  nd2py.core.symbols.rst  nd2py.core.transform.rst  nd2py.core.tree.rst  nd2py.dataset.rst  nd2py.generator.data.rst  nd2py.generator.eq.rst  nd2py.generator.rst  nd2py.search.gp.rst  nd2py.search.llmsr.rst  nd2py.search.mcts.rst  nd2py.search.ndformer.rst  nd2py.search.rst  nd2py.utils.nn.rst  nd2py.utils.rst
docs/source/examples/: custom_operator.md  grouped_parameter.md  index.md
docs/source/getting_started/: installation.md  quick_start.md
docs/source/user_guide/: custom_operators.md  evaluation.md  expression_trees.md  expressions.md  grouped_parameters.md  nettypes.md  parameter_fitting.md
examples/: custom_operator.py
nd2py/: __init__.py  sympy_utils.py
nd2py/cli/: download_models.py  upload_models.py
nd2py/core/: __init__.py  base_visitor.py  functions.py  symbol_api.py  symbols.py
nd2py/core/basic/: __init__.py  get_copy.py  get_length.py
nd2py/core/calc/: __init__.py  eic_calc.py  numpy_calc.py  torch_calc.py
nd2py/core/context/: __init__.py  check_nettype.py  copy_value.py  nettype_inference.py  (+2 more)
nd2py/dataset/: __init__.py  tokenizer.py
nd2py/generator/: __init__.py
nd2py/search/: __init__.py  gp.py  gplearn_generator.py  llmsr.py
nd2py/utils/: __init__.py  attr_dict.py  auto_gpu.py  classproperty.py  factory.py  fix_parser.py  lazy_loader.py  log_exception.py  logger.py  metrics.py  model_store.py  plot.py  render_markdown.py  render_python.py  tag2ansi.py  timing.py  utils.py
scripts/: ndformer_search.debug.py  ndformer_search.py  ndformer_train.py
tests/: conftest.py  test_core.py  test_fix_nettype.py  test_gp.py  test_mcts.py  test_nettype.py  test_nettype_gp.py  test_nettype_mcts.py  test_numpy_calc.py  test_replace.py  test_simplify.py  test_split_by_add.py  test_string_printer.py  test_tree_printer.py
(+173 files in other folders)
