[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nd2py"
version = "3.2.0"
readme = "README.md"
description = "nd2py (Neural Discovery of Network Dynamics) symbolic regression"
authors = [{name="YuMeow", email="yuzh19@tsinghua.org.cn"}]
requires-python = ">=3.12"
# 主依赖：不包含 torch 和 torch_geometric
dependencies = [
  "tqdm>=4.66",
  "numpy>=1.20",
  "scipy>=1.14",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "setproctitle",
  "matplotlib",
  "seaborn",
  "pyyaml",
  "rich",
  "dotenv",
  "requests",
  "pyperclip",
  "platformdirs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12", # 徽章主要看这一行
    "License :: OSI Approved :: MIT License", # 建议加上你的授权协议
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 可选依赖定义
[project.optional-dependencies]
nn = [
  "torch>=1.12",
  "torch_geometric>=2.0"  # 建议加上版本号限制
]
# 文档构建依赖组
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-parser",
  "sphinx-autodoc-typehints"
]
# 开发与发包依赖组
dev = [
  "build",
  "twine",
  "pytest>=8.3", # pytest 其实也更适合放在 dev 里而不是主依赖里
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
# 注册标记
markers = [
    "slow: marks tests as slow (integration tests)",
    "paid: marks tests as paid API calls (requires credits)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nd2py*"]
