[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nd2py"
version = "3.2.2"
readme = "README.md"
description = "nd2py (Neural Discovery of Network Dynamics) symbolic regression"
authors = [{name="YuMeow", email="yuzh19@tsinghua.org.cn"}]
requires-python = ">=3.12"
dependencies = [
  "tqdm>=4.66",
  "numpy>=1.20",
  "scipy>=1.14",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "setproctitle",
  "matplotlib",
  "seaborn",
  "pyyaml",
  "rich",
  "dotenv",
  "requests",
  "pyperclip",
  "platformdirs",
  "openai>=1.0",
  "google-genai>=1.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 可选依赖定义
[project.optional-dependencies]
nn = [
  "torch>=1.12",
  "torch_geometric>=2.0"
]
search = [
  "sympy>=1.12",
  "networkx>=3.0"
]
dev = [
  "sphinx",
  "sphinx-book-theme",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "build",
  "twine",
  "pytest>=8.3",
]
all = [
  "nd2py[nn,search,dev]",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--quiet -m 'not slow and not paid'"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (integration tests)",
    "paid: marks tests as paid API calls (requires credits)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nd2py*"]
